--- a/TestApp/TestApp.csproj
+++ b/TestApp/TestApp.csproj
@@ -48,6 +48,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\SelfieFood.2gisApi\SelfieFood.DoubleGisApi.csproj">
+      <Project>{633840BF-8068-4526-A6AB-548024E674BF}</Project>
+      <Name>SelfieFood.DoubleGisApi</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SelfieFood.HowOldApi\SelfieFood.HowOldApi.csproj">
       <Project>{709e8fc8-e942-48f5-92d5-b506ae3fdfbb}</Project>
       <Name>SelfieFood.HowOldApi</Name>
