before frontend stuff

--- a/SelfieFood.SilverlightApp/SelfieFood.SilverlightApp.csproj
+++ b/SelfieFood.SilverlightApp/SelfieFood.SilverlightApp.csproj
@@ -95,6 +95,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="LocalizedStrings.cs" />
+    <Compile Include="LocationService.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
