--- a/SelfieFood.2gisApi/SelfieFood.DoubleGisApi.csproj
+++ b/SelfieFood.2gisApi/SelfieFood.DoubleGisApi.csproj
@@ -53,6 +53,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Response.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SelfieFood.Common\SelfieFood.Common.csproj">
+      <Project>{E587D904-10A5-4571-B35E-D578DB925059}</Project>
+      <Name>SelfieFood.Common</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
