Добавил либы и иконки

--- a/SelfieFood.SilverlightApp/SelfieFood.SilverlightApp.csproj
+++ b/SelfieFood.SilverlightApp/SelfieFood.SilverlightApp.csproj
@@ -162,6 +162,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="FirstLookData.txt" />
+    <Content Include="Images\feature.camera.png" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\AppResources.resx">
