Добавил гео параметры

--- a/SelfieFood.2gisApi/SelfieFood.DoubleGisApi.csproj
+++ b/SelfieFood.2gisApi/SelfieFood.DoubleGisApi.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GeoLocationParameters.cs" />
     <Compile Include="SearchRequestEvaluator.cs" />
     <Compile Include="FoodServiceAttribute.cs" />
     <Compile Include="DoubleGisDataProvider.cs" />
