--- a/SelfieFood.SilverlightApp/SelfieFood.SilverlightApp.csproj
+++ b/SelfieFood.SilverlightApp/SelfieFood.SilverlightApp.csproj
@@ -161,6 +161,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="FirstLookData.txt" />
+    <Content Include="Images\background.jpg" />
     <Content Include="Images\feature.camera.png" />
     <Content Include="Images\like.png" />
   </ItemGroup>
