--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,5 +2,6 @@
 <repositories>
   <repository path="..\..\..\Users\y.vasilyev\Documents\Visual Studio 2013\Projects\SelfieFood.Web\SelfieFood.Web.Tests\packages.config" />
   <repository path="..\SelfieFood.HowOldApi\packages.config" />
+  <repository path="..\SelfieFood.SilverlightApp\packages.config" />
   <repository path="..\SelfieFood.Web\packages.config" />
 </repositories>
