--- a/SelfieFood.SilverlightApp/SelfieFood.SilverlightApp.csproj
+++ b/SelfieFood.SilverlightApp/SelfieFood.SilverlightApp.csproj
@@ -107,6 +107,8 @@
     <Compile Include="Results.xaml.cs">
       <DependentUpon>Results.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\PeopleViewModel.cs" />
+    <Compile Include="ViewModels\ViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
