--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\..\..\Users\y.vasilyev\Documents\Visual Studio 2013\Projects\SelfieFood.Web\SelfieFood.Web.Tests\packages.config" />
+  <repository path="..\SelfieFood.2gisApi\packages.config" />
+  <repository path="..\SelfieFood.Common\packages.config" />
   <repository path="..\SelfieFood.HowOldApi\packages.config" />
   <repository path="..\SelfieFood.SilverlightApp\packages.config" />
   <repository path="..\SelfieFood.Web\packages.config" />
