изменен стартовый экран

--- a/SelfieFood.SilverlightApp/SelfieFood.SilverlightApp.csproj
+++ b/SelfieFood.SilverlightApp/SelfieFood.SilverlightApp.csproj
@@ -167,6 +167,7 @@
     <Content Include="FirstLookData.txt" />
     <Content Include="Images\background.jpg" />
     <Content Include="Images\feature.camera.png" />
+    <Content Include="Images\folder.png" />
     <Content Include="Images\like.png" />
   </ItemGroup>
   <ItemGroup>
