--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -6,4 +6,5 @@
   <repository path="..\SelfieFood.HowOldApi\packages.config" />
   <repository path="..\SelfieFood.SilverlightApp\packages.config" />
   <repository path="..\SelfieFood.Web\packages.config" />
+  <repository path="..\SelfieFood.WebApi\packages.config" />
 </repositories>
